# sound-engine

./: CMakeLists.txt  README.md
common/decoders/: AudioDecoder.cpp  AudioDecoder.hpp  Mp3Decoder.cpp  Mp3Decoder.hpp  OggDecoder.cpp  OggDecoder.hpp  WavDecoder.cpp  WavDecoder.hpp
common/impl/: InternalBuffer.hpp  InternalEngine.hpp  InternalSound.hpp  Sound.cpp  Sound.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundEngine.cpp  SoundEngine.hpp  Utils.hpp
common/impl/dummy/: DummyBuffer.cpp  DummyBuffer.hpp  DummyEngine.cpp  DummyEngine.hpp  DummySound.cpp  DummySound.hpp
common/impl/openal/: OalBuffer.cpp  OalBuffer.hpp  OalSound.cpp  OalSound.hpp  OalSoundEngine.cpp  OalSoundEngine.hpp  OalUtils.cpp  OalUtils.hpp
common/impl/xaudio2/: XAudio2Buffer.cpp  XAudio2Buffer.hpp  XAudio2Engine.cpp  XAudio2Engine.hpp  XAudio2Sound.cpp  XAudio2Sound.hpp  XAudio2Utils.hpp
common/include/: ISound.hpp  ISoundEngine.hpp  Sound.hpp  SoundEngine.hpp  SoundHandle.cpp  SoundHandle.hpp
tests/: main.cpp
